# DVSM-Draco

./: .gitignore  ARCHITECTURE_OVERVIEW.md  ATTRIBUTION.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  INTEGRATION_PLAN.md  LEGAL_FRAMEWORK.md  LICENSE  PHASE_I4A_SPECIFICATION.md  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/interop/: dx12_shared_handle.rs  mod.rs
src/overlay/: dxgi_hook.rs  hud_renderer.rs  metrics_tracker.rs  mod.rs  watermark.rs
src/physics/: bitfield_parser.rs  dvsm_state.rs  evolution.rs  fixed_point.rs  mod.rs  regime_fsm.rs  validator.rs
